Added ref to loadBalancerIP to sfdemo/templates/service.yaml.

--- a/sfdemo/templates/service.yaml
+++ b/sfdemo/templates/service.yaml
@@ -11,5 +11,8 @@ spec:
       targetPort: http
       protocol: TCP
       name: http
+  {{- with .Values.service.loadBalancerIP }}
+  loadBalancerIP: {{ . }}
+  {{- end }}
   selector:
     {{- include "sfdemo.selectorLabels" . | nindent 4 }}
