--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "commerce-sdk": "^2.10.0",
     "express": "^4.15.2",
     "nanoid": "^3.3.4"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.22.2"
   }
 }
