--- a/.github/workflows/run-playwright-tests.yaml
+++ b/.github/workflows/run-playwright-tests.yaml
@@ -27,7 +27,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
     - name: Install dependencies
-      run: npm ci
+      run: npm install
     - name: Install Playwright
       run: npx playwright install --with-deps
     - name: Build production build
